fix tracks squished when overflowing

--- a/dashboard/src/pages/global.scss
+++ b/dashboard/src/pages/global.scss
@@ -118,71 +118,75 @@ body {
             padding-top: 30px;
             right: 0;
 
-            .tracks-container {
-                display: flex;
-                flex-direction: column;
-                flex-grow: 1;
+            .tracks-overflow-container {
                 width: 100%;
                 overflow: auto;
 
-                .track-container {
-                    padding: 8px;
+                .tracks-container {
                     display: flex;
-                    gap: 12px;
-                    border-radius: 4px;
-                    transition-duration: 0.1s;
-                    cursor: pointer;
-                    position: relative;
-                    overflow: hidden;
+                    flex-direction: column;
+                    flex-grow: 1;
+                    width: 100%;
 
-                    &:hover {
-                        background-color: rgba(255, 255, 255, 0.1);
-                    }
-
-                    .thumb {
-                        max-width: 50px;
-                        max-height: 50px;
+                    .track-container {
+                        padding: 8px;
                         display: flex;
-                        justify-content: center;
-                        align-items: center;
+                        gap: 12px;
+                        border-radius: 4px;
+                        transition-duration: 0.1s;
+                        cursor: pointer;
+                        position: relative;
+                        overflow: hidden;
 
-                        img {
-                            flex-grow: 1;
-                        }
-                    }
-
-                    > .info {
-                        flex-grow: 1;
-                        display: flex;
-                        flex-direction: column;
-                        gap: 4px;
-
-                        .title {
-                            font-size: 16px;
-                        }
-
-                        .info {
-                            font-size: 14px;
-                            color: rgba(255, 255, 255, 0.75);
-                        }
-                    }
-
-                    .drag-container {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                    }
-
-                    .drag-overlay {
-                        display: flex;
-                        position: absolute;
-                        width: 100%;
-                        height: 100%;
-                        top: 0;
-                        left: 0;
-
-                        &.active {
+                        &:hover {
                             background-color: rgba(255, 255, 255, 0.1);
+                        }
+
+                        .thumb {
+                            max-width: 50px;
+                            max-height: 50px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            img {
+                                flex-grow: 1;
+                            }
+                        }
+
+                        > .info {
+                            flex-grow: 1;
+                            display: flex;
+                            flex-direction: column;
+                            gap: 4px;
+
+                            .title {
+                                font-size: 16px;
+                            }
+
+                            .info {
+                                font-size: 14px;
+                                color: rgba(255, 255, 255, 0.75);
+                            }
+                        }
+
+                        .drag-container {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+
+                        .drag-overlay {
+                            display: flex;
+                            position: absolute;
+                            width: 100%;
+                            height: 100%;
+                            top: 0;
+                            left: 0;
+
+                            &.active {
+                                background-color: rgba(255, 255, 255, 0.1);
+                            }
                         }
                     }
                 }
